# aggressiveness-detection-mex-spa

./: .gitignore  1.Explotatory_data_analysis.ipynb  2.Baseline_model.ipynb  3_Pipeline_for_experimenting.ipynb  README.md  config.yaml  pyproject.toml  requirements.txt  wandb_export_2026-07-06T18_14_02.041-06_00.csv
.claude/: settings.json
notebooks/: 2.Baseline_model.ipynb  3_Pipeline_for_experimenting.ipynb  Baseline_model.ipynb  Error_analysis.ipynb  Error_analysis_best_model.ipynb  Explotatory_data_analysis.ipynb  Pipeline_for_experimenting.ipynb
scripts/: run_clean_data.py  run_combine_character_level_n_grams.py  run_hyperparameter_tunning_best_model.py  run_models_experiment.py  run_preprocess_data.py  run_train_baseline_model.py  run_train_model.py  run_train_models.py
src/: clean_data.py  evaluate.py  preprocess_data.py  train_model.py  utils.py
tests/: test_clean_data.py  test_preprocess_data.py
