[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "aggressiveness-detection-mex-spa"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.4.2",
    "pandas>=3.0.3",
    "pyyaml>=6.0.3",
    "spacy>=3.8.14",
]

[tool.setuptools.packages.find]
where = ["."]
