[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "aggressiveness-detection-mex-spa"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.4.2",
    "dotenv>=0.9.9",
    "emoji>=2.15.0",
    "matplotlib>=3.11.0",
    "pandas>=3.0.3",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.9.0",
    "seaborn>=0.13.2",
    "spacy>=3.8.14",
    "wandb>=0.28.0",
]

[tool.setuptools.packages.find]
where = ["."]
